[tool.poetry]
name = "continuity-life"
version = "0.1"
description = "a simulation of a universe"
authors = ["Andrei <andreisva2023@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.2"
pygame = "^2.1.3"

[tool.poetry.scripts]
continuity = "continuity:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"